@startuml

entity User {
    id : INT <<generated>>
    --
    username : VARCHAR(64)
    password : VARCHAR(128)
    name: VARCHAR(128)
    phone: VARCHAR(16)
    email: VARCHAR(28)
    role : VARCHAR(128)
    address : VARCHAR(128)
}

entity DayShift {
    id : INT <<generated>>
    --
    name : VARCHAR(32)
    start_time : TIME
    end_time: TIME
}

entity RegisteredWorkshift {
    id: INT <<generated>>
    --
    user_id : INT <<FK>>
    day : VARCHAR(28)
    dayshift_id : INT <<FK>>
}

entity Message {
    id : INT <<generated>>
    --
    recipient_id : INT <<FK>>
    body : VARCHAR(140)
    timestamp : DATETIME
}

entity Productivity {
    id : INT <<generated>>
    --
    user_id : INT <<FK>>
    date : DATE
    dayshift_id : INT <<FK>>
    arrival : TIME
    staying : INTERVAL
}

entity Detection {
    id : INT <<generated>>
    --
    user_id : INT <<FK>>
    cam_id : INT <<FK>>
    date : DATE
    frame_time : TIME
    frame_id : INT
    track_id : INT
    detection_mode : VARCHAR(28)
    tracking_mode : VARCHAR(28)
    det : VARCHAR(10000)
}

entity STA {
    id : INT <<generated>>
    --
    det_id_1 : INT <<FK>>
    det_id_2 : INT <<FK>>
    loc_infer_mode : INT
}

entity Camera {
    id : INT <<generated>>
    --
    address : VARCHAR(128)
}

User ||..o{ RegisteredWorkshift
User ||..o{ Message
User ||..o{ Productivity
User |o..o{ Detection
Camera ||..o{ Detection
Detection ||..o{ STA
DayShift ||--o{ RegisteredWorkshift
DayShift ||--o{ Productivity

@enduml